Fixing catalog image height on mobile

--- a/public/assets/style/style.scss
+++ b/public/assets/style/style.scss
@@ -200,7 +200,7 @@ footer {
         height: 300px;
         object-fit: cover;
         @include breakpoint(sm) {
-            height: auto;
+            height: 400px;
         }
     }
 }
